bridge/base/0-catalogo-juegos-namespace.yaml
#! 0-catalogo-juegos-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
