bridge/base/api-juegos-deployment.yaml
#! api-juegos-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-juegos
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: api-juegos
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: catalogo_juegos
            com.docker.compose.service: api-juegos
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: catalogo_juegos
                com.docker.compose.service: api-juegos
                com.docker.compose.network.net-proyecto: "true"
        spec:
            containers:
                - name: spring-api
                  image: catalogo_juegos-api-juegos
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-juegos-8080
                      containerPort: 8080
