bridge/base/db-juegos-deployment.yaml
#! db-juegos-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db-juegos
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: db-juegos
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: catalogo_juegos
            com.docker.compose.service: db-juegos
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: catalogo_juegos
                com.docker.compose.service: db-juegos
                com.docker.compose.network.net-proyecto: "true"
        spec:
            containers:
                - name: postgres-db
                  image: postgres:15
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-juegos-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-juegos-postgres-data
