bridge/base/frontend-web-deployment.yaml
#! frontend-web-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-web
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: frontend-web
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: catalogo_juegos
            com.docker.compose.service: frontend-web
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: catalogo_juegos
                com.docker.compose.service: frontend-web
                com.docker.compose.network.net-proyecto: "true"
        spec:
            containers:
                - name: angular-app
                  image: catalogo_juegos-frontend-web
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-web-80
                      containerPort: 80
