bridge/base/api-juegos-expose.yaml
#! api-juegos-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-juegos
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: api-juegos
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: api-juegos
    ports:
        - name: api-juegos-8080
          port: 8080
          targetPort: api-juegos-8080
