bridge/base/db-juegos-service.yaml
#! db-juegos-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-juegos-published
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: db-juegos
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: db-juegos
    ports:
        - name: db-juegos-5432
          port: 5432
          protocol: TCP
          targetPort: db-juegos-5432

# check if there is at least one published port
