bridge/base/frontend-web-expose.yaml
#! frontend-web-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-web
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: frontend-web
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: frontend-web
    ports:
        - name: frontend-web-80
          port: 80
          targetPort: frontend-web-80
