bridge/base/frontend-web-service.yaml
#! frontend-web-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-web-published
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: frontend-web
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: frontend-web
    ports:
        - name: frontend-web-80
          port: 80
          protocol: TCP
          targetPort: frontend-web-80

# check if there is at least one published port
