bridge/base/streamlit-dashboard-expose.yaml
#! streamlit-dashboard-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: streamlit-dashboard
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: streamlit-dashboard
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: streamlit-dashboard
    ports:
        - name: streamlit--8501
          port: 8501
          targetPort: streamlit--8501
