bridge/base/streamlit-dashboard-service.yaml
#! streamlit-dashboard-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: streamlit-dashboard-published
    namespace: catalogo-juegos
    labels:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: streamlit-dashboard
spec:
    selector:
        com.docker.compose.project: catalogo_juegos
        com.docker.compose.service: streamlit-dashboard
    ports:
        - name: streamlit--8501
          port: 8501
          protocol: TCP
          targetPort: streamlit--8501
